<resources>
    <string name="app_name">Sorteador</string>
    <string name="sortear">Sortear</string>
    <string name="utilizar_limite">Utilizar limite</string>
    <string name="hint">Valor máximo (opcional)</string>
    <string name="inicie_o_sorteio">Inicie o sorteio</string>
    <string name="sorteio_de_1_a_1000">Sorteio de 1 a 1000</string>
    <string name="sequencia_do_sorteio">Sequência do Sorteio</string>
</resources>