<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/btn_sortear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sortear"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_usar_limite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/utilizar_limite"
        app:layout_constraintEnd_toEndOf="@+id/edit_limite"
        app:layout_constraintStart_toStartOf="@+id/edit_limite"
        app:layout_constraintTop_toBottomOf="@+id/edit_limite"/>

    <EditText
        android:id="@+id/edit_limite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView_saida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicie_o_sorteio"
        android:textColor="@color/orange"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView_intervalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sorteio_de_1_a_1000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_usar_limite"
        app:layout_constraintStart_toStartOf="@+id/btn_usar_limite"
        app:layout_constraintTop_toBottomOf="@+id/btn_usar_limite"/>

    <ListView
        android:id="@+id/list_sorteados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sortear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>